kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vorboss 
spec:
  revisionHistoryLimit: 5
  replicas: 1
  selector:
    matchLabels:
      app: vorboss
  template:
    metadata:
      labels:
        app: vorboss
    spec:
      containers:
      - name: app
        image: i0nw/vorboss:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          protocol: TCP
      imagePullSecrets:
      - name: dockerhub
