kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vorbossi0nio
spec:
  type: ClusterIP 
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app: vorboss
